// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Communicator tests default renderer 1`] = `
<div
  className="CommunicatorToolbar"
>
  <ForwardRef(WithStyles)
    className="Communicator__title"
    disabled={false}
    id="boards-button"
    onClick={[Function]}
  >
    <UNDEFINED />
    <FormattedMessage
      defaultMessage="Boards"
      id="cboard.components.CommunicatorToolbar.boards"
      values={Object {}}
    />
  </ForwardRef(WithStyles)>
  <ForwardRef(WithStyles)
    anchorEl={null}
    className="CommunicatorToolbar__menu"
    id="boards-menu"
    onClose={[Function]}
    open={false}
  >
    <ForwardRef(WithStyles)
      className="CommunicatorToolbar__menuitem"
      onClick={[Function]}
    >
      <ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)>
          <UNDEFINED />
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)
        inset={true}
        primary="board-1"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </ForwardRef(WithStyles)>
    <ForwardRef(WithStyles)
      className="CommunicatorToolbar__menuitem"
      onClick={[Function]}
    >
      <ForwardRef(WithStyles)>
        <ForwardRef(WithStyles)>
          <UNDEFINED />
        </ForwardRef(WithStyles)>
      </ForwardRef(WithStyles)>
      <ForwardRef(WithStyles)
        inset={true}
        primary="board-2-name"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </ForwardRef(WithStyles)>
  </ForwardRef(WithStyles)>
  <WithWidth(WithMobileDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <ForwardRef(WithStyles)
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      type="text"
      value="some-communicator-title"
    />
  </WithWidth(WithMobileDialog)>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <ForwardRef(WithStyles)
      disabled={false}
      onClick={[Function]}
    >
      <UNDEFINED
        className="CommunicatorToolbar__group CommunicatorToolbar__group--start--button"
      />
      cboard.components.CommunicatorToolbar.editCommunicator
    </ForwardRef(WithStyles)>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  />
</div>
`;

exports[`Communicator tests menu behavior 1`] = `
<div
  className="CommunicatorToolbar"
>
  <WithStyles(ForwardRef(Button))
    className="Communicator__title"
    disabled={false}
    id="boards-button"
    onClick={[Function]}
  >
    <ArrowDropDownIcon />
    <FormattedMessage
      defaultMessage="Boards"
      id="cboard.components.CommunicatorToolbar.boards"
      values={Object {}}
    />
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Menu))
    anchorEl={null}
    className="CommunicatorToolbar__menu"
    id="boards-menu"
    onClose={[Function]}
    open={false}
  >
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-1"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <ViewModuleIcon />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-1"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-2"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <ViewModuleIcon />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-2-name"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
  </WithStyles(ForwardRef(Menu))>
  <WithWidth(WithMobileDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(TextField))
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      type="text"
      value="some-communicator-title"
    />
  </WithWidth(WithMobileDialog)>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <WithStyles(ForwardRef(Button))
      disabled={false}
      onClick={[Function]}
    >
      <LayersIcon
        className="CommunicatorToolbar__group CommunicatorToolbar__group--start--button"
      />
      cboard.components.CommunicatorToolbar.editCommunicator
    </WithStyles(ForwardRef(Button))>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  />
</div>
`;

exports[`Communicator tests menu behavior 2`] = `
<div
  className="CommunicatorToolbar"
>
  <WithStyles(ForwardRef(Button))
    className="Communicator__title"
    disabled={false}
    id="boards-button"
    onClick={[Function]}
  >
    <ArrowDropDownIcon />
    <FormattedMessage
      defaultMessage="Boards"
      id="cboard.components.CommunicatorToolbar.boards"
      values={Object {}}
    />
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Menu))
    anchorEl="someElement"
    className="CommunicatorToolbar__menu"
    id="boards-menu"
    onClose={[Function]}
    open={true}
  >
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-1"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <ViewModuleIcon />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-1"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-2"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <ViewModuleIcon />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-2-name"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
  </WithStyles(ForwardRef(Menu))>
  <WithWidth(WithMobileDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(TextField))
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      type="text"
      value="some-communicator-title"
    />
  </WithWidth(WithMobileDialog)>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <WithStyles(ForwardRef(Button))
      disabled={false}
      onClick={[Function]}
    >
      <LayersIcon
        className="CommunicatorToolbar__group CommunicatorToolbar__group--start--button"
      />
      cboard.components.CommunicatorToolbar.editCommunicator
    </WithStyles(ForwardRef(Button))>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  />
</div>
`;

exports[`Communicator tests switching boards behavior 1`] = `
<div
  className="CommunicatorToolbar"
>
  <WithStyles(ForwardRef(Button))
    className="Communicator__title"
    disabled={false}
    id="boards-button"
    onClick={[Function]}
  >
    <ArrowDropDownIcon />
    <FormattedMessage
      defaultMessage="Boards"
      id="cboard.components.CommunicatorToolbar.boards"
      values={Object {}}
    />
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Menu))
    anchorEl={null}
    className="CommunicatorToolbar__menu"
    id="boards-menu"
    onClose={[Function]}
    open={false}
  >
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-1"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <ViewModuleIcon />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-1"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-2"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <ViewModuleIcon />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-2-name"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
  </WithStyles(ForwardRef(Menu))>
  <WithWidth(WithMobileDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(TextField))
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      type="text"
      value="some-communicator-title"
    />
  </WithWidth(WithMobileDialog)>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <WithStyles(ForwardRef(Button))
      disabled={false}
      onClick={[Function]}
    >
      <LayersIcon
        className="CommunicatorToolbar__group CommunicatorToolbar__group--start--button"
      />
      cboard.components.CommunicatorToolbar.editCommunicator
    </WithStyles(ForwardRef(Button))>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  />
</div>
`;

exports[`Communicator tests switching boards behavior 2`] = `
<div
  className="CommunicatorToolbar"
>
  <WithStyles(ForwardRef(Button))
    className="Communicator__title"
    disabled={false}
    id="boards-button"
    onClick={[Function]}
  >
    <ArrowDropDownIcon />
    <FormattedMessage
      defaultMessage="Boards"
      id="cboard.components.CommunicatorToolbar.boards"
      values={Object {}}
    />
  </WithStyles(ForwardRef(Button))>
  <WithStyles(ForwardRef(Menu))
    anchorEl="someElement"
    className="CommunicatorToolbar__menu"
    id="boards-menu"
    onClose={[Function]}
    open={true}
  >
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-1"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <ViewModuleIcon />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-1"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
    <WithStyles(ForwardRef(ListItem))
      className="CommunicatorToolbar__menuitem"
      key="board-2"
      onClick={[Function]}
    >
      <WithStyles(ForwardRef(ListItemAvatar))>
        <WithStyles(ForwardRef(Avatar))>
          <ViewModuleIcon />
        </WithStyles(ForwardRef(Avatar))>
      </WithStyles(ForwardRef(ListItemAvatar))>
      <WithStyles(ForwardRef(ListItemText))
        inset={true}
        primary="board-2-name"
        secondary="cboard.components.CommunicatorToolbar.tiles"
      />
    </WithStyles(ForwardRef(ListItem))>
  </WithStyles(ForwardRef(Menu))>
  <WithWidth(WithMobileDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={false}
    title={
      <FormattedMessage
        defaultMessage="Edit Communicator Title"
        id="cboard.components.CommunicatorToolbar.editTitle"
        values={Object {}}
      />
    }
  >
    <WithStyles(ForwardRef(TextField))
      autoFocus={true}
      fullWidth={true}
      label={
        <FormattedMessage
          defaultMessage="Communicator Title"
          id="cboard.components.CommunicatorToolbar.communicatorTitle"
          values={Object {}}
        />
      }
      margin="dense"
      onChange={[Function]}
      required={true}
      type="text"
      value="some-communicator-title"
    />
  </WithWidth(WithMobileDialog)>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--start"
  >
    <WithStyles(ForwardRef(Button))
      disabled={false}
      onClick={[Function]}
    >
      <LayersIcon
        className="CommunicatorToolbar__group CommunicatorToolbar__group--start--button"
      />
      cboard.components.CommunicatorToolbar.editCommunicator
    </WithStyles(ForwardRef(Button))>
  </div>
  <div
    className="CommunicatorToolbar__group CommunicatorToolbar__group--end"
  />
</div>
`;
